--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,21 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web-services', version: '2.6.2'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+	implementation group: 'com.sun.jersey.contribs', name: 'jersey-apache-client', version: '1.19.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+ext {
+	set('springCloudVersion', "2021.0.0")
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 test {
